More fix, add update point
